Fixed the indoor widget covering the map

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 #map2 {
-  height: 50%;
+  height: 347px;
   width: 100%;
 }
 
